Minor fixes and improvements: open links in new tabs, reduce spacing on mobile nav options, change home section background color, fix issue with phone number not displaying on iPhones, reduce right margin on work section at lower breakpoint, potential fix for overlay glitch on mobile, fix nav links on mobile

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -32,6 +32,7 @@
   }
   #work .resume .work-item {
     text-align: left;
+    padding-right: 0;
   }
   #work .resume .work-item:before {
     transform: translate(-40px,6px);
@@ -51,7 +52,7 @@
   }
   #header nav ul li {
     width: 100%;
-    margin: 10px 0;
+    margin: 5px 0;
   }
   #headline {
     font-size: 40px;
